[package]
name = "pphd8extract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.14", features = ["derive"] }
eframe = "0.24.1"
env_logger = "0.10.1"
rayon = "1.8.0"
rfd = "0.12.1"
scc = "2.0.9"
